architectureDesign/PUML/maksym-finops-private_Resources/resourcesJson/finopshub-vnet-norwayeast-nsg.json
{
  "provisioningState": "Succeeded",
  "resourceGuid": "6a5a29dd-ad33-48b5-a6e0-b3a5093fd738",
  "defaultSecurityRules": [
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "description": "Allow inbound traffic from all VMs in VNET",
        "direction": "Inbound",
        "priority": 65000,
        "access": "Allow"
      },
      "name": "AllowVnetInBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/defaultSecurityRules/AllowVnetInBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "AzureLoadBalancer",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "description": "Allow inbound traffic from azure load balancer",
        "direction": "Inbound",
        "priority": 65001,
        "access": "Allow"
      },
      "name": "AllowAzureLoadBalancerInBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "description": "Deny all inbound traffic",
        "direction": "Inbound",
        "priority": 65500,
        "access": "Deny"
      },
      "name": "DenyAllInBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/defaultSecurityRules/DenyAllInBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "direction": "Outbound",
        "priority": 65000,
        "access": "Allow"
      },
      "name": "AllowVnetOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/defaultSecurityRules/AllowVnetOutBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "Internet",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "description": "Allow outbound traffic from all VMs to Internet",
        "direction": "Outbound",
        "priority": 65001,
        "access": "Allow"
      },
      "name": "AllowInternetOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/defaultSecurityRules/AllowInternetOutBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "description": "Deny all outbound traffic",
        "direction": "Outbound",
        "priority": 65500,
        "access": "Deny"
      },
      "name": "DenyAllOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/defaultSecurityRules/DenyAllOutBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    }
  ],
  "securityRules": [
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 100,
        "access": "Allow"
      },
      "name": "AllowVnetInBound",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/securityRules/AllowVnetInBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "AzureLoadBalancer",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 200,
        "access": "Allow"
      },
      "name": "AllowAzureLoadBalancerInBound",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/securityRules/AllowAzureLoadBalancerInBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 4096,
        "access": "Deny"
      },
      "name": "DenyAllInBound",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/securityRules/DenyAllInBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 100,
        "access": "Allow"
      },
      "name": "AllowVnetOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/securityRules/AllowVnetOutBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "Internet",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 200,
        "access": "Allow"
      },
      "name": "AllowInternetOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/securityRules/AllowInternetOutBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 4096,
        "access": "Deny"
      },
      "name": "DenyAllOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/networkSecurityGroups/finopshub-vnet-norwayeast-nsg/securityRules/DenyAllOutBound",
      "etag": "W/\"a4f24677-e71b-41b4-9b37-4f0675c3cf11\""
    }
  ],
  "subnets": [
    {
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/virtualNetworks/finopshub-vnet-norwayeast/subnets/private-endpoint-subnet"
    },
    {
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/virtualNetworks/finopshub-vnet-norwayeast/subnets/script-subnet"
    },
    {
      "id": "/subscriptions/0/resourceGroups/maksym-finops-private/providers/Microsoft.Network/virtualNetworks/finopshub-vnet-norwayeast/subnets/dataExplorer-subnet"
    }
  ],
  "flowLogs": [
    {
      "id": "/subscriptions/0/resourceGroups/NetworkWatcherRG/providers/Microsoft.Network/networkWatchers/NetworkWatcher_norwayeast/flowLogs/finopshub-vnet-norwayeast-nsg-flowlog"
    }
  ]
}
